--- a/207-targeted-admix.Rmd
+++ b/207-targeted-admix.Rmd
@@ -222,3 +222,43 @@ PlotAdmix("outputs/207/16-K2-gls.qopt", m16)
 ```{r}
 PlotAdmix("outputs/207/16-K3-gls.qopt", m16)
 ```
+
+doIbs admixture is stinky.    
+
+What about a few more fish?    
+
+```{r}
+m25<-m58 %>% filter(Region %in% c("Cambodia","Vietnam", "Thailand","India Eastern Coast", "India Western Coast"))
+write_tsv(m25 %>% select(Path), file="bamlists/25-downsample.bamlist", col_names = FALSE)
+
+m58 %>% filter(Region %in% c("Indonesia","Philippines","India Eastern Coast", "India Western Coast"))
+```
+
+
+Making beagle file    
+-rf genome/lates-lgs.txt
+-r
+```{sh, eval=FALSE}
+srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+-bam bamlists/25-downsample.bamlist -rf genome/lates-lgs.txt \
+-anc  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-minInd 23 -minMapQ 20 -minQ 20 -GL 1 -doGLF 2 \
+-doMajorMinor 1 -doPost 1 -doMaf 1 -SNP_pval 1e-6 \
+-minMaf 0.05 \
+-out outputs/207/25-gls-90 > outputs/207/25-gls-90.out 2> outputs/207/25-gls-90.err &
+
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/207/25-gls-90.beagle.gz -K 2 -o outputs/207/25-K2-gls &
+srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/207/25-gls-90.beagle.gz -K 3 -o outputs/207/25-K3-gls &
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/207/25-gls-90.beagle.gz -K 4 -o outputs/207/25-K4-gls &
+srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/207/25-gls-90.beagle.gz -K 5 -o outputs/207/25-K5-gls &
+```
+
+324012    GLs with one chrom, results poorly reolved, trying all chroms.
+
+```{r}
+PlotAdmix("outputs/207/25-K2-gls.qopt", m25)
+```
+
+```{r}
+PlotAdmix("outputs/207/25-K3-gls.qopt", m25)
+```
