--- a/208-site-lists.Rmd
+++ b/208-site-lists.Rmd
@@ -135,14 +135,22 @@ diffs2<-merge2 %>% filter(AbsoluteDifferenceAUSSEA>0.90)
 ```{r}
 set1<-diffs1 %>% select(Chromosome, Position)
 set2<-diffs2 %>% select(Chromosome, Position)
-complete<-bind_rows(set1,set2) %>% unique()
+complete<-bind_rows(set1,set2) %>% unique() %>% arrange(Chromosome, Position)
+
+write_tsv(complete, file="meta/complete-site-list.tsv", col_names = FALSE)
 ```
 
+```{r}
+ggplot(diffs1) +
+  geom_histogram(aes(x=Chromosome), stat='count')
+```
 
 Can I pull these from a beagle file for ngsAdmix?
 (base) maccamp@farm:~/lates-wgs$ cat meta/site-list-AUSSEA-IND.csv  | cut -f 1,2 -d ',' | grep -v "Chrom" | perl -pe 's/,/\t/g' > outputs/208/site-list.txt
 angsd sites index site-list.txt
 
+cp meta/complete-site-list.tsv ./outputs/208/
+angsd sites index complete-site-list.tsv 
 ```{sh, eval=FALSE}
 srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
 -bam bamlists/downsample-58.bamlist -sites outputs/208/site-list.txt \
@@ -151,6 +159,35 @@ srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
 -doMajorMinor 1 -doPost 1 -doMaf 1 -SNP_pval 1e-6 \
 -minMaf 0.05 \
 -out outputs/208/58-gls-90 > outputs/208/58-gls-90.out 2> outputs/208/58-gls-90.err &
+
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/208/58-gls-90.beagle.gz -K 2 -o outputs/208/58-K2-gls &
+srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/208/58-gls-90.beagle.gz -K 3 -o outputs/207/58-K3-gls &
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/208/58-gls-90.beagle.gz -K 4 -o outputs/207/58-K4-gls &
+
+
+srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+-bam bamlists/downsample-58.bamlist -sites outputs/208/complete-site-list.tsv  \
+-anc  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-minInd 52 -minMapQ 20 -minQ 20 -GL 1 -doGLF 2 \
+-doMajorMinor 1 -doPost 1 -doMaf 1 -SNP_pval 1e-6 \
+-minMaf 0.05 \
+-out outputs/208/58-gls-90-clist > outputs/208/58-gls-90-clist.out 2> outputs/208/58-gls-90-clist.err &
+
+
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/208/58-gls-90-clist.beagle.gz -K 2 -o outputs/208/58-K2-gls-clist &
+srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/208/58-gls-90-clist.beagle.gz -K 3 -o outputs/207/58-K3-gls-clist &
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/208/58-gls-90-clist.beagle.gz -K 4 -o outputs/207/58-K4-gls-clist &
 ```
 
 
+Removing NC_066849.1
+```{r}
+incomplete<-complete %>% filter(Chromosome !="NC_066849.1")
+
+ggplot(incomplete) +
+  geom_histogram(aes(x=Chromosome), stat='count')
+```
+
+```{r}
+write_tsv(complete %>% filter(Chromosome !="NC_066849.1"), file="meta/incomplete-site-list.tsv", col_names = FALSE)
+```
