--- a/209-merge-vcf.Rmd
+++ b/209-merge-vcf.Rmd
@@ -202,15 +202,25 @@ bgzip plink-33.vcf
 tabix plink-33.vcf.gz
 
 bcftools view plink-33.vcf.gz -i 'MAF>0.10' | bcftools view -i 'MAF < 0.40' | bcftools +prune -l 0.20 -w 10000 > plink-33-pruned.vcf
+
+plink --tped snps-51.tped --tfam snps-51.tfam  --out plink-binary-51 --recode --allow-extra-chr --noweb
+plink --ped plink-binary-51.ped --map plink-binary-51.map --recode vcf --allow-extra-chr -out plink-51
+bgzip plink-51.vcf 
+tabix plink-51.vcf.gz
+
+bcftools view plink-51.vcf.gz -i 'MAF>0.10' | bcftools view -i 'MAF < 0.40' | bcftools +prune -l 0.20 -w 10000 > plink-51-pruned.vcf
+
 ```
 
-
+37525 unlinked variants in plink-51.vcf
 
 ```{r}
-mydat <- import.snpR.data("outputs/209/plink-33-pruned.vcf", sample.meta = m33 %>% select(Run,Pop,Lineage))
+#mydat <- import.snpR.data("outputs/209/plink-33-pruned.vcf", sample.meta = m33 %>% select(Run,Pop,Lineage))
+mydat <- import.snpR.data("outputs/209/plink-51-pruned.vcf", sample.meta = m51 %>% select(Run,Pop,Lineage))
 ```
 
-1163 variants
+1163 variants in plink-33
+1307 variants in plink-51
 ```{r}
 plot_clusters(mydat, facets="Lineage", facet.order=c("AUS+NG","SEA","IND"),
               viridis.option = "viridis")
@@ -261,7 +271,7 @@ Neat!!
 Now, with RAD+IND can we retrieve these snps?
 ```{sh, eval=FALSE}
 (base) Macs-MacBook-Pro-2:209 mac$ cat plink-33-pruned.vcf  | grep -v "#" | cut -f 1,2 > plink-33-pruned-site-list.txt
-
+cat plink-51-pruned.vcf  | grep -v "#" | cut -f 1,2 > plink-51-pruned-site-list.txt
 bcftools view -R outputs/209/plink-33-pruned-site-list.txt outputs/209/plink.vcf.gz > outputs/209/plink-restricted-sites.vcf
 ```
 
@@ -303,9 +313,17 @@ srun -t 24:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task
  -out outputs/209/snps-188  -doGlf 2 \
  -minMapQ 20 -minQ 20 -GL 1 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
 -doGeno 2 -doPost 1 -postCutoff 0.95 -doPlink 2  > outputs/209/snps-188.out 2> outputs/209/snps-188.err &
+
+srun -t 24:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=12 $HOME/angsd/angsd -nthreads 24 \
+-minInd 178 -rf genome/lates-lgs.txt -sites outputs/209/plink-51-pruned-site-list.txt \
+-bam bamlists/188.bamlist -ref genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+ -out outputs/209/snps-188-51  -doGlf 2 \
+ -minMapQ 20 -minQ 20 -GL 1 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doGeno 2 -doPost 1 -postCutoff 0.95 -doPlink 2  > outputs/209/snps-188-51.out 2> outputs/209/snps-188-51.err &
+
 ```
 
 This will take a hot minute.
 
-Expecting ~ca1163 SNPs
+Expecting ~1163 SNPs
 
