--- a/209-merge-vcf.Rmd
+++ b/209-merge-vcf.Rmd
@@ -215,8 +215,8 @@ bcftools view plink-51.vcf.gz -i 'MAF>0.10' | bcftools view -i 'MAF < 0.40' | bc
 37525 unlinked variants in plink-51.vcf
 
 ```{r}
-#mydat <- import.snpR.data("outputs/209/plink-33-pruned.vcf", sample.meta = m33 %>% select(Run,Pop,Lineage))
-mydat <- import.snpR.data("outputs/209/plink-51-pruned.vcf", sample.meta = m51 %>% select(Run,Pop,Lineage))
+mydat <- import.snpR.data("outputs/209/plink-33-pruned.vcf", sample.meta = m33 %>% select(Run,Pop,Lineage))
+#mydat <- import.snpR.data("outputs/209/plink-51-pruned.vcf", sample.meta = m51 %>% select(Run,Pop,Lineage))
 ```
 
 1163 variants in plink-33
@@ -291,8 +291,8 @@ plot_clusters(mydat, facets="Pop",
 
 ```{r}
 wgs<-read_csv("meta/58.csv") %>% rename(Pop=Region) %>% 
-  mutate(Lineage=ifelse(Region %in% c("Northern Territory","Queensland","Papua New Guinea"),"AUS+NG",
-                                                ifelse(Region %in% c("India Eastern Coast","India Western Coast"),"IND","SEA"))) %>% 
+  mutate(Lineage=ifelse(Pop %in% c("Northern Territory","Queensland","Papua New Guinea"),"AUS+NG",
+                                                ifelse(Pop %in% c("India Eastern Coast","India Western Coast"),"IND","SEA"))) %>% 
   select(Run,Pop,Lineage,Path)
 rad2<-rad %>% select(Run,Pop,Lineage,Path)
 combos2<-bind_rows(wgs,rad2)
@@ -325,5 +325,5 @@ srun -t 24:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task
 
 This will take a hot minute.
 
-Expecting ~1163 SNPs
+Expecting ~1163 SNPs with plink-33
 
