--- a/207-targeted-admix.Rmd
+++ b/207-targeted-admix.Rmd
@@ -262,6 +262,29 @@ PlotAdmix("outputs/207/25-K2-gls.qopt", m25)
 ```{r}
 PlotAdmix("outputs/207/25-K3-gls.qopt", m25)
 ```
+Indonesia+Philippines
+
+```{r}
+m27<-m58 %>% filter(Region %in% c("Indonesia","Philippines","India Eastern Coast", "India Western Coast"))
+write_tsv(m27 %>% select(Path), file="bamlists/27-downsample.bamlist", col_names = FALSE)
+
+```
+
+
+```{sh, eval=FALSE}
+srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+-bam bamlists/27-downsample.bamlist -rf genome/lates-lgs.txt \
+-anc  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-minInd 24 -minMapQ 20 -minQ 20 -GL 1 -doGLF 2 \
+-doMajorMinor 1 -doPost 1 -doMaf 1 -SNP_pval 1e-6 \
+-minMaf 0.05 \
+-out outputs/207/27-gls-90 > outputs/207/27-gls-90.out 2> outputs/207/27-gls-90.err &
+
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/207/27-gls-90.beagle.gz -K 2 -o outputs/207/27-K2-gls &
+srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/207/27-gls-90.beagle.gz -K 3 -o outputs/207/27-K3-gls &
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/207/27-gls-90.beagle.gz -K 4 -o outputs/207/27-K4-gls &
+srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/207/27-gls-90.beagle.gz -K 5 -o outputs/207/27-K5-gls &
+```
 
 
 ## All samples
@@ -273,6 +296,7 @@ PlotAdmix("outputs/207/25-K3-gls.qopt", m25)
 srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/206/58-gls-90.beagle.gz -K 2 -o outputs/207/58-K2-gls &
 srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/206/58-gls-90.beagle.gz -K 3 -o outputs/207/58-K3-gls &
 srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/206/58-gls-90.beagle.gz -K 4 -o outputs/207/58-K4-gls &
+srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/206/58-gls-90.beagle.gz -K 4 -o outputs/207/58-K5-gls &
 
 ```
 
@@ -281,7 +305,7 @@ PlotAdmix("outputs/207/58-K2-gls.qopt", m58)
 ```
 
 ```{r}
-PlotAdmix("outputs/207/58-K3-gls.qopt", m58)
+PlotAdmix("outputs/207/58-K3-gls.qopat", m58)
 ```
 
 
