--- a/201-mystery-chrom.Rmd
+++ b/201-mystery-chrom.Rmd
@@ -95,4 +95,113 @@ ggplot(merge %>% filter(Chromosome=="NC_066849.1")) +
   geom_density2d_filled(aes(x=Position, y=AbsoluteDifference), alpha=0.75)
 ```
 
-## NGS Paralogs?
+## Local PCA, NGS Paralogs, or coverage??
+
+Trying local pca of  plink-33.vcf in 209
+
+```{sh, eval=FALSE}
+cat lates-lgs.txt  | while read line; do bcftools view -Ob -r $line plink-33.vcf.gz > $line.bcf; done;
+for f in *.bcf; do bcftools index $f; done;
+
+```
+
+```{r}
+m33<-read_csv("meta/33.csv")
+
+samples<-m33 %>% select(Run) %>% rename(ID=Run)
+
+population<-m33 %>% select(Pop) %>% rename(population=Pop)
+
+
+table<-cbind(samples, population)
+write.table(table, "outputs/201/plink-33/sample_info.tsv", quote = TRUE, row.names = FALSE, sep="\t")
+```
+
+This is ~73,315 snps, so pretty dense, ~3000 snps/chrom
+
+
+./run_lostruct.R -i /Users/mac/github/lates-wgs/outputs/201/plink-33 -t snp -s 20 -m 4 -I /Users/mac/github/lates-wgs/outputs/201/plink-33/sample_info.tsv -j l201
+
+./run_lostruct.R -i /Users/mac/github/lates-wgs/outputs/201/plink-33 -t snp -s 30 -m 4 -I /Users/mac/github/lates-wgs/outputs/201/plink-33/sample_info.tsv -j l202
+
+Using the smaller (snp20 windows first)
+```{r}
+mds<-read_csv("outputs/201/plink-33/mds_coords.csv")
+#make tidy
+tidymds<-mds %>% gather(MDS, Value, 3:6)
+MDS1<-filter(tidymds, MDS=="MDS1") %>% rename(MDS1=MDS) %>% rename(Value1=Value)
+MDS2<-filter(tidymds, MDS=="MDS2") %>% rename(MDS2=MDS) %>% rename(Value2=Value)
+MDS3<-filter(tidymds, MDS=="MDS3") %>% rename(MDS3=MDS) %>% rename(Value3=Value)
+MDS4<-filter(tidymds, MDS=="MDS4") %>% rename(MDS4=MDS) %>% rename(Value4=Value)
+
+ggplot(mds)+
+  geom_point(aes(x=MDS1, y=MDS2), alpha=0.75) +
+  theme_bw()
+
+ggplot(mds)+
+  geom_point(aes(x=MDS1, y=MDS3), alpha=0.75) +
+  theme_bw()
+```
+
+
+Plot along chroms    
+
+```{r}
+p1<-MDS1 %>% mutate(Index=1:n())
+
+out <- boxplot.stats(p1$Value1)$out
+out_ind <- which(p1$Value1 %in% c(out))
+outliers<-p1[out_ind,]
+```
+
+```{r}
+chroms<-p1 %>% group_by(chrom) %>% mutate(Start=min(Index), Stop=max(Index)) %>% select(chrom,Start,Stop) %>% unique() %>% 
+  mutate(Position=round((Start+Stop)/2))
+
+nb.cols <- nrow(chroms)
+mycolors <- colorRampPalette(brewer.pal(8, "Set1"))(nb.cols)
+
+ggplot(p1) +
+  geom_rect(data=chroms, aes(xmin=Start, xmax=Stop, ymin=min(p1$Value1), ymax=max(p1$Value1)), fill=mycolors, alpha=0.25) +
+  geom_point(data=p1, aes(x=Index, y=Value1, color=chrom), alpha=0.75, cex=0.5) +
+  geom_point(data=outliers, aes(x=Index, y=Value1), color="black", cex=0.5) +
+  theme_bw() +
+  scale_x_continuous(breaks=chroms$Position, labels=chroms$chrom) +
+  theme(axis.text.x = element_text(angle=45, hjust = 1, face="bold", size=6)) +
+  theme(legend.title = element_blank()) +
+  theme(panel.grid = element_blank()) +
+  theme(legend.position = "none") +
+  scale_color_manual(values=mycolors) +
+  ylab("MDS1") +
+  xlab("Chromosome")
+```
+
+```{r}
+p2<-MDS2 %>% mutate(Index=1:n())
+
+out2 <- boxplot.stats(p2$Value2)$out
+out_ind2 <- which(p2$Value2 %in% c(out2))
+outliers2<-p2[out_ind2,]
+
+chroms<-p2 %>% group_by(chrom) %>% mutate(Start=min(Index), Stop=max(Index)) %>% select(chrom,Start,Stop) %>% unique() %>% 
+  mutate(Position=round((Start+Stop)/2))
+
+#Make enough colors
+nb.cols <- nrow(chroms)
+mycolors <- colorRampPalette(brewer.pal(8, "Set1"))(nb.cols)
+
+
+ggplot(p2) +
+  geom_rect(data=chroms, aes(xmin=Start, xmax=Stop, ymin=min(p2$Value2), ymax=max(p2$Value2)), fill=mycolors, alpha=0.25) +
+  geom_point(data=p2, aes(x=Index, y=Value2, color=chrom), alpha=0.75, cex=0.5) +
+  geom_point(data=outliers2, aes(x=Index, y=Value2), color="black", cex=0.5) +
+  theme_bw() +
+  scale_x_continuous(breaks=chroms$Position, labels=chroms$chrom) +
+  theme(axis.text.x = element_text(angle=45, hjust = 1, face="bold", size=6)) +
+  theme(legend.title = element_blank()) +
+  theme(panel.grid = element_blank()) +
+  theme(legend.position = "none") +
+  scale_color_manual(values=mycolors) +
+  ylab("MDS2") +
+  xlab("Chromosome")
+```
