--- a/range-map.Rmd
+++ b/range-map.Rmd
@@ -98,10 +98,11 @@ map2<-ggplot() +
   geom_polygon(data=mp,aes(x=long,y=lat,group=group), fill="grey", 
                color="black",size=0.2)+
   coord_fixed(1.3)+
+  theme_bw() +
    theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(),
-        panel.background =  element_rect(fill="grey50"))+
+        panel.background =  element_rect(fill="white"))+
   coord_fixed(ratio=1.3, xlim = c(-0, 360), ylim=c(-90,90))
-
+map2
 ```
 theme(axis.title.x=element_blank(), axis.text.x=element_blank(), 
         axis.ticks.x=element_blank())+
@@ -136,15 +137,16 @@ ggplot() + geom_point(data=points, aes(x=long, y=lat, fill=DataType, shape=Linea
 ```
 
 ```{r}
+points2<-points %>% filter(DataType=="WGS")
 map2 +
   geom_raster(data=range, aes(x=`Center Long`, y=`Center Lat`, fill=`Overall Probability`),alpha=0.75) +
   scale_fill_gradient(low="yellow", high="red")+
-  geom_point(data=points, aes(x=long, y=lat), fill=points$color, shape=points$shape, cex=2) +
+  geom_point(data=points2, aes(x=long, y=lat), fill=points2$color, shape=points2$shape, cex=2) +
   geom_point(data=loc, aes(x=long, y=lat), fill=loc$color, shape=loc$shape, cex=2) +
   geom_text_repel(data=loc, aes(x=long, y=lat, label=text), size=2, fontface="bold") +
   coord_cartesian(xlim =c(30,180), ylim=c(-45,45)) +
   xlab("\nLongitude") +
   ylab("Latitude\n") +
-  theme(axis.title = element_text(size=18, face="bold"))
+  theme(axis.title = element_text(size=18, face="bold")) 
 ggsave("outputs/range-map/range-map.jpeg")
 ```
